type of filter selectable + text-overflow fix

--- a/public/style.css
+++ b/public/style.css
@@ -138,3 +138,10 @@ section {
 .skill-filter-form {
   position: relative;
 }
+
+.form-check-label {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
